added setting bio support

--- a/views/forms/bio.ejs
+++ b/views/forms/bio.ejs
@@ -1,5 +1,5 @@
 <div class="title">Set Bio</div>
 <form method="POST" action="/bio">
-	<textarea name="bio" type="text" class="full-width" placeholder="Enter your bio here."></textarea>
+	<textarea name="bio" type="text" class="full-width" placeholder="Enter your bio here."><%= userData.bio%></textarea>
 	<input type="submit" class="full-width" value="Save Bio">
 </form>
